Update sign > share > donate flow

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -67,24 +67,45 @@ Custom template for same-page post-AJAX submit share ask.
 		</span>
 	</span>
 	<span id="afteraction-progress-meter-step2" class="afteraction-progress-meter-step">
-		<span class="afteraction-progress-meter-dot icon" data-icon=""></span>
-			{% filter ak_text:"afteraction_progress_step2" %}Share{% endfilter %}
-		</span>
+		{% if page.custom_fields.after_action_next_step == "scroll-share" %}
+			<span class="afteraction-progress-meter-dot icon" data-icon=""></span>
+				{% filter ak_text:"afteraction_progress_step2" %}Share{% endfilter %}
+			</span>
+		{% elif page.custom_fields.after_action_next_step == "scroll-donate" %}
+			<span class="afteraction-progress-meter-dot icon" data-icon=""></span>
+				{% filter ak_text:"afteraction_progress_step3" %}Donate{% endfilter %}
+			</span>
+		{% endif %}
 	</span>
 	<span id="afteraction-progress-meter-step3" class="afteraction-progress-meter-step">
-		<span class="afteraction-progress-meter-dot icon" data-icon=""></span>
-			{% filter ak_text:"afteraction_progress_step3" %}Donate{% endfilter %}
-		</span>
+		{% if page.custom_fields.after_action_next_step == "scroll-share" %}
+			<span class="afteraction-progress-meter-dot icon" data-icon=""></span>
+				{% filter ak_text:"afteraction_progress_step3" %}Donate{% endfilter %}
+			</span>
+		{% elif page.custom_fields.after_action_next_step == "scroll-donate" %}
+			<span class="afteraction-progress-meter-dot icon" data-icon=""></span>
+				{% filter ak_text:"afteraction_progress_step2" %}Share{% endfilter %}
+			</span>
+		{% endif %}
 	</span>
 </div>
 
 <div id="afteraction">
+	{% if page.custom_fields.after_action_next_step == "scroll-share" %}
 	<div id="afteraction-share" class="section afteraction-panel border-top title-section padding-medium width-narrow text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}" aria-live="polite" style="display:none;">
 		<div id="afteraction-share-inner" class="section-inner"></div>
 	</div>
 	<div id="afteraction-donate" class="section afteraction-panel title-section padding-medium width-narrow text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}-fade" aria-live="polite" style="display:none;">
 		<div id="afteraction-donate-inner" class="section-inner"></div>
 	</div>
+	{% else %}
+	<div id="afteraction-donate" class="section afteraction-panel title-section padding-medium width-narrow text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}-fade" aria-live="polite" style="display:none;">
+		<div id="afteraction-donate-inner" class="section-inner"></div>
+	</div>
+	<div id="afteraction-share" class="section afteraction-panel border-top title-section padding-medium width-narrow text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}" aria-live="polite" style="display:none;">
+		<div id="afteraction-share-inner" class="section-inner"></div>
+	</div>
+	{% endif %}
 </div>
 
 
@@ -208,7 +229,7 @@ Custom template for same-page post-AJAX submit share ask.
 	<div>
 		<a
 			class="afteraction-donate-ask-no text-small"
-			href="{% if templateset.custom_fields.getinvolved_url %}{% include_tmpl templateset.custom_fields.getinvolved_url %}{% else %}https://350.org/get-involved{% endif %}"
+			href="{% if page.custom_fields.after_action_next_step == 'scroll-share' %}{% if templateset.custom_fields.getinvolved_url %}{% include_tmpl templateset.custom_fields.getinvolved_url %}{% else %}https://350.org/get-involved{% endif %}{% else%}#{% endif %}"
 		>
 			{% if page.custom_fields.afteraction_donate_ask_no %}
 				{{ page.custom_fields.afteraction_donate_ask_no }}
@@ -243,6 +264,10 @@ jQuery(document).ready(function($){
 		var afteractionDonateSlideInner = $('#afteraction-donate-inner');
 		var afteractionDonateAskContent = $('#afteraction-donate-ask-source').html();
 		var afteractionDonateContent = $('#afteraction-donate-source').html();
+
+		// get the setting of the after action next step variable
+		var afterActionNextStep = "{{ page.custom_fields.after_action_next_step }}";
+		var getInvolvedURL = "{% if templateset.custom_fields.getinvolved_url %}{% include_tmpl templateset.custom_fields.getinvolved_url %}{% else %}https://350.org/get-involved{% endif %}";
 
 		const euroCountries = ['Austria', 'Belgium', 'Cyprus', 'Estonia', 'Finland', 'France', 'Germany', 'Greece', 'Ireland', 'Italy', 'Latvia', 'Lithuania', 'Luxembourg', 'Malta', 'Netherlands', 'Portugal', 'Slovakia', 'Slovenia', 'Spain'];
 
@@ -306,7 +331,7 @@ jQuery(document).ready(function($){
 			}
 		}
 
-		function afteractionShowShareAsk(){
+		function afteractionShowShareAsk(el){
 			if ( afteractionShareSlideInner.html() == '' ){
 				afteractionShareSlideInner.append( afteractionShareAskContent )
 				afteractionShareSlide.show();
@@ -317,6 +342,20 @@ jQuery(document).ready(function($){
 			afteractionProgressMeter.fadeIn();
 			$(document).trigger('domUpdated'); // tell other scripts to re-run
 			$("#jump-to-form").remove();
+
+			if (afterActionNextStep === 'scroll-donate') {
+				if ( $(el).hasClass('afteraction-donate-ask-no') ){
+					$("#afteraction-progress-meter-step2 .afteraction-progress-meter-dot")
+						.removeClass('complete')
+						.addClass('declined')
+						.attr('data-icon',''); //&xE943; X
+				} else {
+					$("#afteraction-progress-meter-step2 .afteraction-progress-meter-dot")
+						.removeClass('declined')
+						.addClass('complete')
+						.attr('data-icon',''); //&xE942; checkmark
+				}
+			}
 		}
 
 		function afteractionShowShare(){
@@ -350,16 +389,20 @@ jQuery(document).ready(function($){
 						scrollTop: afteractionDonateSlide.offset().top
 					}, 800);
 			});
-			if ( $(el).hasClass('afteraction-share-ask-no') ){
-				$("#afteraction-progress-meter-step2 .afteraction-progress-meter-dot")
-					.removeClass('complete')
-					.addClass('declined')
-					.attr('data-icon',''); //&xE943; X
+			if (afterActionNextStep === 'scroll-share') {
+				if ( $(el).hasClass('afteraction-share-ask-no') ){
+					$("#afteraction-progress-meter-step2 .afteraction-progress-meter-dot")
+						.removeClass('complete')
+						.addClass('declined')
+						.attr('data-icon',''); //&xE943; X
+				} else {
+					$("#afteraction-progress-meter-step2 .afteraction-progress-meter-dot")
+						.removeClass('declined')
+						.addClass('complete')
+						.attr('data-icon',''); //&xE942; checkmark
+				}
 			} else {
-				$("#afteraction-progress-meter-step2 .afteraction-progress-meter-dot")
-					.removeClass('declined')
-					.addClass('complete')
-					.attr('data-icon',''); //&xE942; checkmark
+				afteractionProgressMeter.fadeIn();
 			}
 		};
 
@@ -420,39 +463,88 @@ jQuery(document).ready(function($){
 							'position': 'relative'
 						});
 						$('.loader').hide();
-						// show the share ask
-						afteractionShowShareAsk();
-						// if user opts to share, show share dialog
-						$('.afteraction-share-ask-yes').on('click', function(){
-							afteractionShowShare();
-							// handle adblockers preventing the loading of Google Analytics library
-							if (typeof ga !== 'undefined') {
-								ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
-							}
-						});
-						$('.afteraction-share-ask-no').on('click', function(){
-							// handle adblockers preventing the loading of Google Analytics library
-							if (typeof ga !== 'undefined') {
-								ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
-							}
-						});
-						// if user opts not to share or has completed sharing, show donate ask
-						afteraction.on('click','.afteraction-share-ask-no, .afteraction-share-button', function(){
-							var el = $(this);
-							afteractionShowDonate(el);
-						});
-						$('.afteraction-donate-amount, .afteraction-donate-ask-yes').on('click', function(){
-							// handle adblockers preventing the loading of Google Analytics library
-							if (typeof ga !== 'undefined') {
-								ga('send', 'event', 'scrolling-signup', 'afteraction-donate-yes', window.location.pathname);
-							}
-						});
-						$('.afteraction-donate-ask-no').on('click', function(){
-							// handle adblockers preventing the loading of Google Analytics library
-							if (typeof ga !== 'undefined') {
-								ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
-							}
-						});
+						if (afterActionNextStep === 'scroll-share') {
+							// show the share ask
+							afteractionShowShareAsk();
+							// if user opts to share, show share dialog
+							$('.afteraction-share-ask-yes').on('click', function(){
+								afteractionShowShare();
+								// handle adblockers preventing the loading of Google Analytics library
+								if (typeof ga !== 'undefined') {
+									ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
+								}
+							});
+							$('.afteraction-share-ask-no').on('click', function(){
+								// handle adblockers preventing the loading of Google Analytics library
+								if (typeof ga !== 'undefined') {
+									ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
+								}
+							});
+							// if user opts not to share or has completed sharing, show donate ask
+							afteraction.on('click','.afteraction-share-ask-no, .afteraction-share-button', function(){
+								var el = $(this);
+								afteractionShowDonate(el);
+							});
+							$('.afteraction-donate-amount, .afteraction-donate-ask-yes').on('click', function(){
+								// handle adblockers preventing the loading of Google Analytics library
+								if (typeof ga !== 'undefined') {
+									ga('send', 'event', 'scrolling-signup', 'afteraction-donate-yes', window.location.pathname);
+								}
+							});
+							$('.afteraction-donate-ask-no').on('click', function(){
+								// handle adblockers preventing the loading of Google Analytics library
+								if (typeof ga !== 'undefined') {
+									ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
+								}
+							});
+						} else if (afterActionNextStep === 'scroll-donate') {
+							// show the donate ask
+							afteractionShowDonate();
+
+							afteraction.on('click', '.afteraction-donate-ask-no', function(e){
+								// prevent getting redirected to the Get Involved URL
+								e.preventDefault();
+
+								// handle adblockers preventing the loading of Google Analytics library
+								if (typeof ga !== 'undefined') {
+									ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
+								}
+								var el = $(this);
+								// if user doesn't want to donate, show the share ask
+								afteractionShowShareAsk(el);
+
+								// if user opts to share, show share dialog
+								$('.afteraction-share-ask-yes').on('click', function(){
+									afteractionShowShare();
+									// handle adblockers preventing the loading of Google Analytics library
+									if (typeof ga !== 'undefined') {
+										ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
+									}
+								});
+								$('.afteraction-share-ask-no').on('click', function(){
+									// handle adblockers preventing the loading of Google Analytics library
+									if (typeof ga !== 'undefined') {
+										ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
+									}
+									window.location.href = getInvolvedURL;
+								});
+							});
+
+							// if user opts not to share or has completed sharing, update progress meter
+							afteraction.on('click','.afteraction-share-ask-no, .afteraction-share-button', function(){
+								if ( $(this).hasClass('afteraction-share-ask-no') ){
+									$("#afteraction-progress-meter-step3 .afteraction-progress-meter-dot")
+										.removeClass('complete')
+										.addClass('declined')
+										.attr('data-icon',''); //&xE943; X
+								} else {
+									$("#afteraction-progress-meter-step3 .afteraction-progress-meter-dot")
+										.removeClass('declined')
+										.addClass('complete')
+										.attr('data-icon',''); //&xE942; checkmark
+								}
+							});
+						}
 					})
 					.fail(function(){
 							console.log('Error: AK AJAX submission failed.');
