--- a/petition.html
+++ b/petition.html
@@ -11,7 +11,7 @@
 	{% endif %}
 			<h2 id="action-title" class="title3 text-style-title3">
 	{% if page.custom_fields.page_title_custom_html %}
-				{% autoescape off %} {{ page.custom_fields.page_title_custom_html }} {% endautoescape %}
+				{% include_tmpl page.custom_fields.page_title_custom_html %}
 	{% else %}
 				<span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
 	{% endif %}
