--- a/donate.html
+++ b/donate.html
@@ -1029,7 +1029,7 @@
       if (step_has_errors) {
         return false;
       } else {
-        checkout_step_track(2, "paypal");
+        checkout_step_track(2, "cc");
         return true;
       }
     }
