--- a/donate.html
+++ b/donate.html
@@ -363,6 +363,25 @@
         <h5 class="margin-bottom-normal">{% filter ak_text:"donate_billing_information" %}Billing Information{% endfilter %}</h5>
         -->
                     <div class="">
+                      <!--Name-->
+                      <div class="name-container">
+                        <div class="input-text first-name-container ak-input-type-user ak-err-below">
+                          <input type="hidden" name="required" value="first_name">
+                          <label for="id_first_name">{% filter ak_text:"field_first_name" %}First Name{% endfilter %}</label>
+                          <input id="id_first_name" class="ak-input-type-user" type="text" name="first_name">
+                        </div>
+                        <div class="input-text last-name-container ak-input-type-user ak-err-below">
+                          <input type="hidden" name="required" value="last_name">
+                          <label for="id_last_name">{% filter ak_text:"field_last_name" %}Last Name{% endfilter %}</label>
+                          <input id="id_last_name" class="ak-input-type-user" type="text" name="last_name">
+                        </div>
+                      </div>
+                      <!--Email-->
+                      <div class="input-text ak-input-type-user input-field-group ak-err-below">
+                        <label class="required"
+                          for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
+                        <input id="id_email" class="" type="text" name="email">
+                      </div>
                       {% if page.allow_international %}
                       <div class="input-select input-country ak-input-type-user input-field-group ak-err-below">
                         <label for="country">{% filter ak_text:"field_country" %}Country{% endfilter %}</label>
@@ -448,23 +467,6 @@
                       </div>
                     </div>
 
-                    <!--Name-->
-                    <div class="input-text ak-input-type-user">
-                      <label for="id_first_name">{% filter ak_text:"field_first_name" %}First Name{% endfilter %}</label>
-                      <input id="id_first_name" class="ak-input-type-user" type="text" name="first_name">
-                      <input type="hidden" name="required" value="first_name">
-                    </div>
-                    <div class="input-text ak-input-type-user">
-                      <label for="id_last_name">{% filter ak_text:"field_last_name" %}Last Name{% endfilter %}</label>
-                      <input id="id_last_name" class="ak-input-type-user" type="text" name="last_name">
-                      <input type="hidden" name="required" value="last_name">
-                    </div>
-                    <!--Email-->
-                    <div class="input-text ak-input-type-user input-field-group">
-                      <label class="required"
-                        for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
-                      <input id="id_email" class="" type="text" name="email">
-                    </div>
                     <!--Credit Card-->
                     {% comment %} Show the Credit Card Fields only when the custom field for donation_only_paypal is
                     {% endcomment %}
@@ -879,7 +881,8 @@
     if (step === "1") {
       validate_fields = ["amount"];
     } else if (step == "2") {
-      validate_fields = ["address1", "address2", "city", "state", "zip",
+      validate_fields = ["email", "first_name", "last_name", "name",
+        "address1", "address2", "city", "state", "zip",
         "country", "region", "postal",
         "shipping_address1", "shipping_address2",
         "shipping_city", "shipping_state",
@@ -888,7 +891,7 @@
         "privacy"
                            {% if templateset.custom_fields.ask_occupation_and_employer %}, "action_employer", "action_occupation"{% endif %}];
     } else {
-      validate_fields = ["email", "card_num", "first_name", "last_name", "name",
+      validate_fields = ["card_num",
         "exp_date_year", "exp_date_month", "exp_date"];
     }
 
@@ -1393,6 +1396,24 @@
   });
 </script>
 {% endif %}
+
+<style>
+  .name-container fieldset {
+    display: inline-flex;
+  }
+
+  .first-name-container, .last-name-container {
+    flex: 1;
+  }
+
+  .first-name-container {
+    border-right: solid 1px rgba(21, 36, 43, 0.3) !important;
+  }
+
+  .last-name-container {
+    border-top: 0 !important;
+  }
+</style>
 
 <!-- New styles for more accessible donate pages -->
 {% if page.custom_fields.page_background_color == 'new_accessible' or page.custom_fields.page_background_color == 'new_accessible_desktop' %}
