Update regional FB pixels

--- a/wrapper.html
+++ b/wrapper.html
@@ -241,8 +241,6 @@
 			fbq('init', '2976874985878630');
 			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 UK' %}
 			fbq('init', '223897111835615');
-			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Germany' %}
-			fbq('init', '974200562960361');
 			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Canada' %}
 			fbq('init', '235529934214728');
 			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Africa' %}
@@ -255,6 +253,12 @@
 			fbq('init', '423813182105279');
 			{% elif page.custom_fields.page_add_regional_fb_pixel == 'Fossielvrij NL' %}
 			fbq('init', '375505180476661');
+			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Australia' %}
+			fbq('init', '262385177432327');
+			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 France' %}
+			fbq('init', '1093870721001969');
+			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Germany' %}
+			fbq('init', '440122750549924');
 			{% endif %}
 			fbq('track', 'PageView');
 	</script>
@@ -274,9 +278,6 @@
 			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 UK' %}
 			<img height="1" width="1" style="display:none"
 		src="https://www.facebook.com/tr?id=223897111835615&ev=PageView&noscript=1" />
-			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Germany' %}
-			<img height="1" width="1" style="display:none"
-		src="https://www.facebook.com/tr?id=974200562960361&ev=PageView&noscript=1" />
 			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Canada' %}
 			<img height="1" width="1" style="display:none"
 		src="https://www.facebook.com/tr?id=235529934214728&ev=PageView&noscript=1" />
@@ -295,6 +296,15 @@
 			{% elif page.custom_fields.page_add_regional_fb_pixel == 'Fossielvrij NL' %}
 			<img height="1" width="1" style="display:none"
 		src="https://www.facebook.com/tr?id=375505180476661&ev=PageView&noscript=1" />
+			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Australia' %}
+			<img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=262385177432327&ev=PageView&noscript=1" />
+			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 France' %}
+			<img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=1093870721001969&ev=PageView&noscript=1" />
+			{% elif page.custom_fields.page_add_regional_fb_pixel == '350 Germany' %}
+			<img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=440122750549924&ev=PageView&noscript=1" />
 			{% endif %}
 		</noscript>
 	<!-- End Facebook Pixel Code -->
