Prevent donors from updating their email addresses

--- a/user_update.html
+++ b/user_update.html
@@ -9,6 +9,11 @@
 	textarea {
 		max-width: initial;
 	}
+
+	.donor-email-label {
+		font-weight: bold;
+		margin-top: 2px;
+	}
 </style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-skinny padding-normal bg-white">
@@ -49,7 +54,12 @@
 						})
 					</script>
 					{% include "./state_select.html" %}
-
+					{% case 'email' %}
+					{% if user.stats.donated %}
+						<p class="donor-email-label">We noticed you have previously donated. To update your email address ({{ field.value }}), please contact us at <a href="mailto:donations@350.org">donations@350.org</a> so we can make sure your donation records are moved to your new address.</p>
+					{% else %}
+						{{ field }}
+					{% endif %}
 					{% else %}
 					{{ field }}
 					{% endswitch %}
