--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -191,11 +191,11 @@ console.log('{{page.type}}');
           smsOptInLanguage = '{{ page.custom_fields.form_label_text_sms_optin }}'
         }
         jQuery('#id_mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> '+smsOptInLanguage+'</label> </span></div>'));
-        {% if page.custom_fields.form_bigger_radio_buttons == "Y" %}
-					jQuery('#id_user_mobile_subscriber_box').addClass('large-checkboxes');
-					jQuery('#id_user_mobile_subscriber_box .ak-userfield-checkbox-choice .checkmark').remove()
-					jQuery('#id_user_mobile_subscriber_box .ak-userfield-checkbox-choice').append(jQuery('<span class="checkmark"/>'));
-				{% endif %}
+
+		// Add large checkboxes
+		jQuery('#id_user_mobile_subscriber_box').addClass('large-checkboxes');
+		jQuery('#id_user_mobile_subscriber_box .ak-userfield-checkbox-choice .checkmark').remove()
+		jQuery('#id_user_mobile_subscriber_box .ak-userfield-checkbox-choice').append(jQuery('<span class="checkmark"/>'));
 
         jQuery('#id_user_mobile_subscriber_true').on('change', function(){
           // if subscriber opt in checkbox is checked, and country is US, include mobile subscriber number in submission
@@ -298,8 +298,8 @@ console.log('{{page.type}}');
   {% endif %}
 {% endif %}
 
-{% if page.custom_fields.form_bigger_radio_buttons == 'Y' %}
 
+<!-- Add styles for larger radio buttons/check boxes -->
 <style>
 	.input-radio.large-radios,
 	.input-radio.large-radios .ak-userfield-radio-choice,
@@ -526,9 +526,6 @@ console.log('{{page.type}}');
 		jQuery('#unknown_user .large-checkboxes.input-checkbox .ak-userfield-checkbox-choice, .large-checkboxes.input-checkbox .ak-survey-checkbox-choice').append(jQuery('<span class="checkmark"/>'));
 	});
 </script>
-
-
-{% endif %}
 
 
 
