Update background color + border for check marks

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -430,7 +430,8 @@ console.log('{{page.type}}');
 		left: 0;
 		height: 25px;
 		width: 25px;
-		background-color: #eee;
+		background-color: #f4f6f8;
+		border: solid 0.8px #979797;
 	}
 	.large-checkboxes.input-checkbox input:checked ~ .checkmark {
 		background-color: #3b88fd;
@@ -483,7 +484,7 @@ console.log('{{page.type}}');
 			width: 18px;
 		}
 		.large-checkboxes.input-checkbox .checkmark:after {
-			left: 6px;
+			left: 5px;
 			top: 2px;
 			width: 3px;
 			height: 8px;
