--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -18,7 +18,7 @@
  </div>
 </div>
 
-<div id="unknown_user" class="user-form ak-errs-below form-style-labelabove text-black">
+<div id="unknown_user" class="user-form ak-user-form ak-errs-below form-style-labelabove text-black">
  {% include "./user_form.html" %}
 {% if page.custom_fields.form_show_gjrg_optins == "Y" %}
   {% include "./user_gjrg_optins.html" %}
@@ -176,26 +176,26 @@ console.log('{{page.type}}');
 		jQuery('#unknown_user').after(jQuery('<div id="known_or_unknow_fields" class="user-form ak-errs-below form-style-labelabove text-black">'));
     function showMobileFields() {
       // add mobile field if not already added, or show if already added
-      if (!jQuery('#id_mobile_phone_box').length) {
-        jQuery('#known_or_unknow_fields').append(jQuery('<div id="id_mobile_phone_box" class="input-text ak-input-type-user  ak-err-below"><label for="id_mobile_phone">Mobile phone</label><input type="text" name="mobile_phone" id="id_mobile_phone" class="ak-userfield-input"></div>'));
+      if (!jQuery('.mobile_phone_box').length) {
+        jQuery('#known_or_unknow_fields').append(jQuery('<div id="ak-fieldbox-mobile_phone" class="input-text ak-input-type-user  ak-err-below"><label for="id_mobile_phone">Mobile phone</label><input type="text" name="mobile_phone" id="id_mobile_phone" class="ak-userfield-input"></div>'));
         jQuery('#id_mobile_phone').on('keyup change', function(){
           ifUSMobileIsProvided(selectedCountry, includeMobSubscriberInFormSubmission, excludeMobSubscriberInFormSubmission);
         });
       } else {
-        jQuery('#id_mobile_phone_box').show();	
+        jQuery('.mobile_phone_box').show();
       }
       // add mobile subscriber checkbox if not already added, or show if already added
-      if (!jQuery('#id_user_mobile_subscriber_box').length) {
+      if (!jQuery('.user_mobile_subscriber_box').length) {
         var smsOptInLanguage = '{% filter ak_text:"sms_privacy_optin" %}Keep me updated by SMS*{% endfilter %}';
         if ('{{ page.custom_fields.form_label_text_sms_optin }}') {
           smsOptInLanguage = '{{ page.custom_fields.form_label_text_sms_optin }}'
         }
-        jQuery('#id_mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> '+smsOptInLanguage+'</label> </span></div>'));
+        jQuery('.mobile_phone_box').after(jQuery('<div id="id_user_mobile_subscriber_box" class="input-checkbox ak-input-type-custom  ak-err-below"><span class="ak-userfield-checkbox-set"><label class="ak-userfield-checkbox-choice"><input type="checkbox" name="user_mobile_subscriber" id="id_user_mobile_subscriber_true" class="ak-userfield-input" value="true"> '+smsOptInLanguage+'</label> </span></div>'));
 
 		// Add large checkboxes
-		jQuery('#id_user_mobile_subscriber_box').addClass('large-checkboxes');
-		jQuery('#id_user_mobile_subscriber_box .ak-userfield-checkbox-choice .checkmark').remove()
-		jQuery('#id_user_mobile_subscriber_box .ak-userfield-checkbox-choice').append(jQuery('<span class="checkmark"/>'));
+		jQuery('.user_mobile_subscriber_box').addClass('large-checkboxes');
+		jQuery('.user_mobile_subscriber_box .ak-userfield-checkbox-choice .checkmark').remove()
+		jQuery('.user_mobile_subscriber_box .ak-userfield-checkbox-choice').append(jQuery('<span class="checkmark"/>'));
 
         jQuery('#id_user_mobile_subscriber_true').on('change', function(){
           // if subscriber opt in checkbox is checked, and country is US, include mobile subscriber number in submission
@@ -214,13 +214,13 @@ console.log('{{page.type}}');
           }
         });
       } else {
-        jQuery('#id_user_mobile_subscriber_box').show();
+        jQuery('.user_mobile_subscriber_box').show();
       }
       jQuery('.sms-privacy-notice').show();
     }
 
     function hideMobileFields() {
-      jQuery('#id_mobile_phone_box, #id_user_mobile_subscriber_box, .sms-privacy-notice').hide();
+      jQuery('.mobile_phone_box, .user_mobile_subscriber_box, .sms-privacy-notice').hide();
       jQuery('#id_mobile_phone, #mobile_subscriber_number').val('');
       jQuery('#mobile_subscriber_number').attr('name', ''); // remove from form submission
       jQuery('#id_user_mobile_subscriber_true').attr('checked', false);
@@ -281,7 +281,7 @@ console.log('{{page.type}}');
     ifCountryIsUS(selectedCountry, showMobileFields, hideMobileFields);
     ifUSMobileIsProvided(selectedCountry, includeMobSubscriberInFormSubmission, excludeMobSubscriberInFormSubmission);
 
-    if (jQuery('#id_mobile_phone_box').length) {
+    if (jQuery('.mobile_phone_box').length) {
       jQuery('#id_mobile_phone').on('keyup change', function(){
         ifUSMobileIsProvided(selectedCountry, includeMobSubscriberInFormSubmission, excludeMobSubscriberInFormSubmission);
       });
