Debug Twitter link sharing

--- a/thanks.html
+++ b/thanks.html
@@ -369,7 +369,7 @@ var usecase = '';
 								{% else %}
 									<textarea class="bg-ltgray border strong p" readonly>{{ page.followup.share_title_value }} {{ page.canonical_url }}</textarea>
 								{% endif %}
-								<p><a class="button-share-medium button-share-twitter bg-twitter-icon bg-twitter-color no-margin-bottom" href="/share/link?type=tw&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}&short=1">{% filter ak_text:"general_tweet" %}Tweet{% endfilter %}</a></p>
+								<p><a class="tw-share button-share-medium button-share-twitter bg-twitter-icon bg-twitter-color no-margin-bottom" href="/share/link?type=tw&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}&short=1">{% filter ak_text:"general_tweet" %}Tweet{% endfilter %}</a></p>
 							</div>
 						</div>
 							</div>
