Update new background design

--- a/donate.html
+++ b/donate.html
@@ -1358,14 +1358,31 @@
     #action-lead .section-inner {
       background-color: #0E76D8;
       border-radius: 2px;
-      padding: 20px;
+      padding: 0px 15px;
     }
     .bg-blue-fade {
       background-color: transparent !important;
     }
+
+    #action-header {
+      margin-top: 1.25rem;
+    }
+
+    #action-lead {
+      padding: 5vh 7.5vw;
+    }
+
     @media screen and (min-width:720px) {
       .bg-blue-fade {
         background-image: unset !important;
+      }
+
+      #action-header {
+        margin-top: 0;
+      }
+
+      #action-lead {
+        padding: 9vh 7.5vw;
       }
     }
     #action-lead .section-inner,  #action-lead .section-inner a,
@@ -1376,7 +1393,7 @@
 
     @media screen and (min-width:720px) {
       #action-lead .section-inner {
-        padding: 100px 50px;
+        padding: 75px 50px;
       }
     }
 
