--- a/thanks.html
+++ b/thanks.html
@@ -496,4 +496,24 @@ actionkit.forms.initForm('act');
 {% endif %}
 
 </script>
+
+{% if page.custom_fields.page_background_color == 'new_accessible' or page.custom_fields.page_background_color == 'new_accessible_desktop' %}
+<style>
+	 #site-footer {
+      background-color: #0E76D8;
+    }
+
+    #site-footer a, .page-bg-img-credit {
+      color: white;
+    }
+
+	#body-mobile-background {
+		opacity: 1;
+	}
+
+	#thanks-message {
+		background-color: #01294E;
+	}
+</style>
+{% endif %}
 {% endblock %}
