Only set opacity on thanks pages

--- a/thanks.html
+++ b/thanks.html
@@ -507,14 +507,13 @@ actionkit.forms.initForm('act');
       color: white;
     }
 
-	#body-mobile-background {
+	.ak-pagetype-thanks #body-mobile-background {
 		opacity: 1;
 	}
 
 	#thanks-message {
 		background-color: #01294E;
 	}
-	
 </style>
 {% endif %}
 {% endblock %}
