Convert Get Involved URL from templateset field to page field; pass through query params to end page

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -232,7 +232,7 @@ Custom template for same-page post-AJAX submit share ask.
 	<div>
 		<a
 			class="afteraction-donate-ask-no button button-alternate"
-			href="{% if page.custom_fields.after_action_next_step == 'scroll-share' %}{% if templateset.custom_fields.getinvolved_url %}{% include_tmpl templateset.custom_fields.getinvolved_url %}{% else %}https://350.org/get-involved{% endif %}{% else%}#{% endif %}"
+			href="{% if page.custom_fields.after_action_next_step == 'scroll-share' %}{% if page.custom_fields.getinvolved_url %}{{ page.custom_fields.getinvolved_url }}{% else %}https://350.org/science{% endif %}{% else%}#{% endif %}"
 		>
 			{% if page.custom_fields.afteraction_donate_ask_no %}
 				{{ page.custom_fields.afteraction_donate_ask_no }}
@@ -270,7 +270,7 @@ jQuery(document).ready(function($){
 
 		// get the setting of the after action next step variable
 		var afterActionNextStep = "{{ page.custom_fields.after_action_next_step }}";
-		var getInvolvedURL = "{% if templateset.custom_fields.getinvolved_url %}{% include_tmpl templateset.custom_fields.getinvolved_url %}{% else %}https://350.org/get-involved{% endif %}";
+		var getInvolvedURL = "{% if page.custom_fields.getinvolved_url %}{{ page.custom_fields.getinvolved_url }}{% else %}https://350.org/science{% endif %}";
 
 		const euroCountries = ['Austria', 'Belgium', 'Cyprus', 'Estonia', 'Finland', 'France', 'Germany', 'Greece', 'Ireland', 'Italy', 'Latvia', 'Lithuania', 'Luxembourg', 'Malta', 'Netherlands', 'Portugal', 'Slovakia', 'Slovenia', 'Spain'];
 
@@ -567,7 +567,8 @@ jQuery(document).ready(function($){
 									if (typeof ga !== 'undefined') {
 										ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
 									}
-									window.location.href = getInvolvedURL;
+									var queryString = window.location.search;
+									window.location.href = getInvolvedURL + queryString;
 								});
 							});
 
