Add default styles for non-Donate pages for new accessible background color option

--- a/donate.html
+++ b/donate.html
@@ -1373,7 +1373,8 @@
     }
 
     @media screen and (min-width:720px) {
-      .bg-blue-fade {
+      .bg-blue-fade,
+      .bg-new_accessible_desktop-fade {
         background-image: unset !important;
       }
 
