Update CSS link back to original; fix checkbox on 1st step of donate page

--- a/wrapper.html
+++ b/wrapper.html
@@ -156,8 +156,7 @@
 	-->
 
 
-	<!-- TODO: Update CSS file back to ak-v3.css, currently ak-v3-test1.css so that staging can be properly tested -->
-	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3-test1.css'
+	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
 		type='text/css' media='screen' />
 	<link rel='stylesheet' href='https://dbqvwi2zcv14h.cloudfront.net/ak/custom.css' type='text/css' media='screen' />
 
